--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,23 @@ faiss-cpu
 pypdf
 langsmith
 numpy
+
+
+torch
+torchvision
+pillow
+opencv-python
+pymupdf
+requests
+tqdm
+
+
+transformers
+accelerate
+bitsandbytes
+Pillow
+openai-clip
+git+https://github.com/openai/CLIP.git
+PyPDF2
+pdf2image
+poppler-utils
